@@ -10,7 +10,7 @@ package com.powsybl.openloadflow.equations;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.openloadflow.network.ElementType;
 import com.powsybl.openloadflow.network.LfElement;
-import com.powsybl.openloadflow.network.LfNetwork;
+import com.powsybl.openloadflow.network.LfElementContainer;
 import org.apache.commons.lang3.tuple.Pair;
 
 import java.io.IOException;
@@ -25,13 +25,17 @@ import java.util.stream.Collectors;
  */
 public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Quantity> {
 
-    private final Map<Pair<Integer, E>, Equation<V, E>> equations = new HashMap<>();
+    private final Map<Pair<Integer, E>, SingleEquation<V, E>> equations = new HashMap<>();
 
-    private final Map<Pair<ElementType, Integer>, List<Equation<V, E>>> equationsByElement = new HashMap<>();
+    private final Map<Pair<ElementType, Integer>, List<SingleEquation<V, E>>> equationsByElement = new HashMap<>();
 
-    private Map<Pair<ElementType, Integer>, List<EquationTerm<V, E>>> equationTermsByElement;
+    private Map<Pair<ElementType, Integer>, List<SingleEquationTerm<V, E>>> equationTermsByElement;
+
+    private final Map<E, EquationArray<V, E>> equationArrays;
 
     private final List<EquationSystemListener<V, E>> listeners = new ArrayList<>();
+
+    private final LfElementContainer elementContainer;
 
     private final VariableSet<V> variableSet;
 
@@ -39,13 +43,15 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
 
     private final EquationSystemIndex<V, E> index;
 
-    public EquationSystem() {
-        this(new VariableSet<>());
+    public EquationSystem(Class<E> equationClass, LfElementContainer elementContainer) {
+        this(equationClass, elementContainer, new VariableSet<>());
     }
 
-    public EquationSystem(VariableSet<V> variableSet) {
+    public EquationSystem(Class<E> equationClass, LfElementContainer elementContainer, VariableSet<V> variableSet) {
+        this.elementContainer = Objects.requireNonNull(elementContainer);
         this.variableSet = Objects.requireNonNull(variableSet);
         index = new EquationSystemIndex<>(this);
+        equationArrays = new EnumMap<>(equationClass);
     }
 
     public VariableSet<V> getVariableSet() {
@@ -64,18 +70,18 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         return index;
     }
 
-    public Collection<Equation<V, E>> getEquations() {
+    public Collection<SingleEquation<V, E>> getEquations() {
         return equations.values();
     }
 
-    private void indexTerm(EquationTerm<V, E> equationTerm) {
+    private void indexTerm(SingleEquationTerm<V, E> equationTerm) {
         if (equationTermsByElement != null) {
             if (equationTerm.getElementType() != null && equationTerm.getElementNum() != -1) {
                 Pair<ElementType, Integer> element = Pair.of(equationTerm.getElementType(), equationTerm.getElementNum());
                 equationTermsByElement.computeIfAbsent(element, k -> new ArrayList<>())
                         .add(equationTerm);
             }
-            for (EquationTerm<V, E> child : equationTerm.getChildren()) {
+            for (SingleEquationTerm<V, E> child : equationTerm.getChildren()) {
                 indexTerm(child);
             }
         }
@@ -92,19 +98,19 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         }
     }
 
-    void addEquationTerm(EquationTerm<V, E> equationTerm) {
+    void addEquationTerm(SingleEquationTerm<V, E> equationTerm) {
         indexTerm(equationTerm);
         attach(equationTerm);
     }
 
-    public List<EquationTerm<V, E>> getEquationTerms(ElementType elementType, int elementNum) {
+    public List<SingleEquationTerm<V, E>> getEquationTerms(ElementType elementType, int elementNum) {
         Objects.requireNonNull(elementType);
         indexAllTerms();
         Pair<ElementType, Integer> element = Pair.of(elementType, elementNum);
         return equationTermsByElement.getOrDefault(element, Collections.emptyList());
     }
 
-    public <T extends EquationTerm<V, E>> T getEquationTerm(ElementType elementType, int elementNum, Class<T> clazz) {
+    public <T extends SingleEquationTerm<V, E>> T getEquationTerm(ElementType elementType, int elementNum, Class<T> clazz) {
         return getEquationTerms(elementType, elementNum)
                 .stream()
                 .filter(term -> clazz.isAssignableFrom(term.getClass()))
@@ -119,11 +125,14 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         if (element.getType() != type.getElementType()) {
             throw new PowsyblException("Incorrect equation type: " + type);
         }
+        if (equationArrays.containsKey(type)) {
+            return equationArrays.get(type).getElement(element.getNum());
+        }
         Pair<Integer, E> p = Pair.of(element.getNum(), type);
-        Equation<V, E> equation = equations.get(p);
+        SingleEquation<V, E> equation = equations.get(p);
         if (equation == null) {
-            equation = addEquation(p)
-                    .setActive(!element.isDisabled());
+            equation = addEquation(p);
+            equation.setActive(!element.isDisabled());
         }
         return equation;
     }
@@ -132,14 +141,27 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         Pair<Integer, E> p = Pair.of(num, type);
         Equation<V, E> equation = equations.get(p);
         if (equation == null) {
-            equation = addEquation(p);
+            var equationArray = equationArrays.get(type);
+            if (equationArray != null) {
+                equation = equationArray.getElement(num);
+            } else {
+                equation = addEquation(p);
+            }
         }
         return equation;
     }
 
     public Optional<Equation<V, E>> getEquation(int num, E type) {
         Pair<Integer, E> p = Pair.of(num, type);
-        return Optional.ofNullable(equations.get(p));
+        var equation = equations.get(p);
+        if (equation != null) {
+            return Optional.of(equation);
+        }
+        var equationArray = equationArrays.get(type);
+        if (equationArray != null) {
+            return Optional.of(equationArray.getElement(num));
+        }
+        return Optional.empty();
     }
 
     public boolean hasEquation(int num, E type) {
@@ -147,26 +169,26 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         return equations.containsKey(p);
     }
 
-    private void deindexTerm(EquationTerm<V, E> term) {
+    private void deindexTerm(SingleEquationTerm<V, E> term) {
         if (term.getElementType() != null && term.getElementNum() != -1) {
-            List<EquationTerm<V, E>> termsForThisElement = equationTermsByElement.get(Pair.of(term.getElementType(), term.getElementNum()));
+            List<SingleEquationTerm<V, E>> termsForThisElement = equationTermsByElement.get(Pair.of(term.getElementType(), term.getElementNum()));
             if (termsForThisElement != null) {
                 termsForThisElement.remove(term);
             }
         }
-        for (EquationTerm<V, E> child : term.getChildren()) {
+        for (SingleEquationTerm<V, E> child : term.getChildren()) {
             deindexTerm(child);
         }
     }
 
-    public Equation<V, E> removeEquation(int num, E type) {
+    public SingleEquation<V, E> removeEquation(int num, E type) {
         Pair<Integer, E> p = Pair.of(num, type);
-        Equation<V, E> equation = equations.remove(p);
+        SingleEquation<V, E> equation = equations.remove(p);
         if (equation != null) {
             Pair<ElementType, Integer> element = Pair.of(type.getElementType(), num);
             equationsByElement.get(element).remove(equation);
             if (equationTermsByElement != null) {
-                for (EquationTerm<V, E> term : equation.getTerms()) {
+                for (SingleEquationTerm<V, E> term : equation.getTerms()) {
                     deindexTerm(term);
                 }
             }
@@ -176,8 +198,8 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         return equation;
     }
 
-    private Equation<V, E> addEquation(Pair<Integer, E> p) {
-        Equation<V, E> equation = new Equation<>(p.getLeft(), p.getRight(), EquationSystem.this);
+    private SingleEquation<V, E> addEquation(Pair<Integer, E> p) {
+        SingleEquation<V, E> equation = new SingleEquation<>(p.getLeft(), p.getRight(), EquationSystem.this);
         equations.put(p, equation);
         Pair<ElementType, Integer> element = Pair.of(p.getRight().getElementType(), p.getLeft());
         equationsByElement.computeIfAbsent(element, k -> new ArrayList<>())
@@ -186,27 +208,58 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         return equation;
     }
 
-    public List<Equation<V, E>> getEquations(ElementType elementType, int elementNum) {
+    public List<SingleEquation<V, E>> getEquations(ElementType elementType, int elementNum) {
         Objects.requireNonNull(elementType);
         Pair<ElementType, Integer> element = Pair.of(elementType, elementNum);
         return equationsByElement.getOrDefault(element, Collections.emptyList());
     }
 
-    public void attach(EquationTerm<V, E> term) {
+    public void attach(SingleEquationTerm<V, E> term) {
         Objects.requireNonNull(term);
         term.setStateVector(stateVector);
     }
 
-    public List<String> getRowNames(LfNetwork network) {
+    public EquationArray<V, E> createEquationArray(E type) {
+        Objects.requireNonNull(type);
+        EquationArray<V, E> equationArray = equationArrays.get(type);
+        if (equationArray == null) {
+            equationArray = new EquationArray<>(type, elementContainer.getElementCount(type.getElementType()), this);
+            for (int elementNum = 0; elementNum < elementContainer.getElementCount(type.getElementType()); elementNum++) {
+                equationArray.setElementActive(elementNum, !elementContainer.getElement(type.getElementType(), elementNum).isDisabled());
+            }
+            equationArrays.put(type, equationArray);
+        }
+        return equationArray;
+    }
+
+    public Collection<EquationArray<V, E>> getEquationArrays() {
+        return equationArrays.values();
+    }
+
+    public Optional<EquationArray<V, E>> getEquationArray(E type) {
+        Objects.requireNonNull(type);
+        return Optional.ofNullable(equationArrays.get(type));
+    }
+
+    public List<String> getRowNames() {
         return index.getSortedVariablesToFind().stream()
-                .map(eq -> network.getBus(eq.getElementNum()).getId() + "/" + eq.getType())
+                .map(v -> elementContainer.getElement(v.getType().getElementType(), v.getElementNum()).getId() + "/" + v.getType())
                 .collect(Collectors.toList());
     }
 
-    public List<String> getColumnNames(LfNetwork network) {
-        return index.getSortedEquationsToSolve().stream()
-                .map(v -> network.getBus(v.getElementNum()).getId() + "/" + v.getType())
-                .collect(Collectors.toList());
+    public List<String> getColumnNames() {
+        List<String> columnNames = new ArrayList<>();
+        columnNames.addAll(index.getSortedSingleEquationsToSolve().stream()
+                .map(e -> elementContainer.getElement(e.getType().getElementType(), e.getElementNum()).getId() + "/" + e.getType())
+                .toList());
+        for (var equationArray : equationArrays.values()) {
+            for (int elementNum = 0; elementNum < equationArray.getElementCount(); elementNum++) {
+                if (equationArray.isElementActive(elementNum)) {
+                    columnNames.add(elementContainer.getElement(equationArray.getType().getElementType(), elementNum).getId() + "/" + equationArray.getType());
+                }
+            }
+        }
+        return columnNames;
     }
 
     public void addListener(EquationSystemListener<V, E> listener) {
@@ -218,21 +271,33 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
         listeners.remove(listener);
     }
 
-    void notifyEquationChange(Equation<V, E> equation, EquationEventType eventType) {
+    void notifyEquationChange(SingleEquation<V, E> equation, EquationEventType eventType) {
         Objects.requireNonNull(equation);
         Objects.requireNonNull(eventType);
         listeners.forEach(listener -> listener.onEquationChange(equation, eventType));
     }
 
-    void notifyEquationTermChange(EquationTerm<V, E> term, EquationTermEventType eventType) {
+    void notifyEquationTermChange(SingleEquationTerm<V, E> term, EquationTermEventType eventType) {
         Objects.requireNonNull(term);
         Objects.requireNonNull(eventType);
         listeners.forEach(listener -> listener.onEquationTermChange(term, eventType));
     }
 
+    void notifyEquationTermArrayChange(EquationTermArray<V, E> equationTermArray, int termNum, EquationTermEventType eventType) {
+        Objects.requireNonNull(equationTermArray);
+        Objects.requireNonNull(eventType);
+        listeners.forEach(listener -> listener.onEquationTermArrayChange(equationTermArray, termNum, eventType));
+    }
+
+    void notifyEquationArrayChange(EquationArray<V, E> equationArray, int elementNum, EquationEventType eventType) {
+        Objects.requireNonNull(equationArray);
+        Objects.requireNonNull(eventType);
+        listeners.forEach(listener -> listener.onEquationArrayChange(equationArray, elementNum, eventType));
+    }
+
     public void write(Writer writer, boolean writeInactiveEquations) {
         try {
-            for (Equation<V, E> equation : equations.values().stream().sorted().collect(Collectors.toList())) {
+            for (SingleEquation<V, E> equation : equations.values().stream().sorted().collect(Collectors.toList())) {
                 if (writeInactiveEquations || equation.isActive()) {
                     if (!equation.isActive()) {
                         writer.write("[ ");
@@ -243,6 +308,9 @@ public class EquationSystem<V extends Enum<V> & Quantity, E extends Enum<E> & Qu
                     }
                     writer.write(System.lineSeparator());
                 }
+            }
+            for (EquationArray<V, E> equationArray : equationArrays.values()) {
+                equationArray.write(writer, writeInactiveEquations);
             }
             writer.flush();
         } catch (IOException e) {
